<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:background="@drawable/layout1_1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/app_name_activity1"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="590dp"
        android:textSize="35dp"
        android:textStyle="bold"
        android:textColor="@color/blue_mineSweeper"
        android:fontFamily="sans-serif-medium"
        ></TextView>
    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="115dp"
        android:layout_marginRight="90dp"
        android:layout_marginTop="150dp"
        >
        <RadioButton
            android:id="@+id/beginner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Beginner"
            ></RadioButton>

        <RadioButton
            android:id="@+id/intermediate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Intermediate"
            ></RadioButton>

        <RadioButton
            android:id="@+id/expert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Expert"
            ></RadioButton>

    </RadioGroup>
    
    <fragment
        android:layout_width="352dp"
        android:layout_height="30dp"
        android:layout_marginTop="350dp"
        android:layout_marginLeft="25dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:name="com.example.hw1_minsweeper.ScoresTableFragment"
        android:id="@+id/scoreTableFragment"
        ></fragment>
    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:layout_marginLeft="115dp"
        android:layout_marginRight="90dp"
        android:layout_marginTop="280dp"

        >
    </Button>

</RelativeLayout>